# test-pronin-team

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  run_migrate.sh  tree.txt
src/: Dockerfile  seed-file.json
src/api/: urls.py
src/api/v1/: permissions.py  serializers.py  urls.py  views.py
src/core/: celery.py  settings.py  urls.py
src/core/components/: apps.py  cache.py  celery_cfg.py  database.py  middleware.py  smtp_cfg.py
src/fees/: admin.py  models.py  tasks.py  utils.py
src/fees/management/commands/: populate_db.py
src/fees/migrations/: 0001_initial.py  0002_collect_closed.py  0002_remove_collect_count_supporters.py  0003_payment_amount_alter_collect_image.py  0003_remove_collect_closed.py  0004_alter_payment_options_alter_collect_author_and_more.py  0004_rename_owner_payment_author.py  0005_rename_name_payment_comment.py
src/scripts/: entrypoint.sh  run_celery.sh  spare_run_celery.sh
src/users/: models.py
src/users/migrations/: 0001_initial.py
